[package]
name = "bugstalker"
version = "0.2.3"
edition = "2021"
license = "MIT"
authors = ["Derevtsov Konstantin <godzie@yandex.ru>"]
description = """
BugStalker is a modern and lightweight debugger for rust applications.
"""
repository = "https://github.com/godzie44/BugStalker"
keywords = ["debugger", "debug", "gdb"]
categories = ["command-line-utilities", "development-tools::debugging"]
build = "build.rs"
exclude = ["/.github", "/doc"]

[[bin]]
bench = false
path = "src/main.rs"
name = "bs"

[dependencies]
nix = { version = "0.27.1", features = ["process", "signal", "uio", "personality", "ptrace"] }
once_cell = "1.13.1"
anyhow = "1.0"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
gimli = "0.28.0"
object = "0.32.1"
memmap2 = "0.9.0"
ouroboros = "0.18.0"
typed-arena = "2.0.1"
fallible-iterator = "0.3.0"
itertools = "0.12.1"
unwind = { version = "0.4.2", features = ["ptrace"], optional = true }
rustc-demangle = "0.1.21"
thiserror = "1.0.37"
bytes = "1.2.1"
log = "0.4.17"
env_logger = "0.11.2"
crossterm = "0.27.0"
clap = { version = "4.0", features = ["derive", "env"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
os_pipe = "1.1.2"
proc-maps = "0.3.0"
thread_db = "0.1.4"
smallvec = "1.10.0"
rand = "0.8.5"
ctrlc = "3.2.5"
strum = "0.26.1"
strum_macros = "0.26.1"
signal-hook = "0.3.15"
rayon = "1.7.0"
trie-rs = "0.2.0"
regex = "1.8.4"
walkdir = "2.3.3"
timeout-readwrite = "0.3.3"
tuirealm = { version = "1.9.1", default-features = false, features = ["ratatui", "derive", "crossterm"] }
tui-realm-stdlib = { version = "1.3.2", default-features = false, features = ["ratatui", "crossterm"] }
syntect = "5.2.0"
unicode-width = "0.1.11"
# WAITFORFIX: https://github.com/veeso/tui-realm-treeview/pull/9
tui-realm-treeview = { package = "godzie44-tui-realm-treeview", version = "1.0.0" }
capstone = "0.11.0"
lru = "0.12.1"
chrono = "0.4.31"
sysinfo = "0.30.0"
indexmap = "2.1.0"
chumsky = { version = "1.0.0-alpha.6", features = ["default", "label"] }
ariadne = "0.4.0"
bit_field = "0.10.1"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.8.13"
home = "0.5.9"
which = "6.0.1"
ratatui = { version = "0.28", optional = true }
binsider = { version = "0.2.0", optional = true }

[dev-dependencies]
serial_test = "3.0.0"

[features]
default = ["libunwind", "binsider-integration"]
libunwind = ["unwind"]
binsider-integration = ["binsider", "ratatui"]
int_test = []
