[package]
name = "bugstalker"
version = "0.4.0"
edition = "2024"
rust-version = "1.92.0"
license = "MIT"
authors = ["Derevtsov Konstantin <godzie@yandex.ru>"]
description = """
BugStalker is a modern and lightweight debugger for rust applications.
"""
repository = "https://github.com/godzie44/BugStalker"
keywords = ["debugger", "debug", "gdb"]
categories = ["command-line-utilities", "development-tools::debugging"]
build = "build.rs"
exclude = ["/.github", "/doc", "/website", "/extension"]

[[bin]]
bench = false
path = "src/main.rs"
name = "bs"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
nix = { version = "0.27.1", features = [
    "process",
    "signal",
    "uio",
    "personality",
    "ptrace",
] }
once_cell = "1.13.1"
anyhow = "1.0"
rustyline = "17.0.1"
rustyline-derive = "0.11.1"
gimli = "0.28.0"
object = "0.32.1"
memmap2 = "0.9.0"
ouroboros = "0.18.0"
typed-arena = "2.0.1"
fallible-iterator = "0.3.0"
itertools = "0.12.1"
rustc-demangle = "0.1.21"
thiserror = "1.0.37"
bytes = "1.2.1"
log = "0.4.17"
env_logger = "0.11.2"
crossterm = "0.27.0"
clap = { version = "4.0", features = ["derive", "env"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
os_pipe = "1.1.2"
proc-maps = "0.3.0"
thread_db = "0.1.4"
smallvec = "1.10.0"
rand = "0.8.5"
ctrlc = "3.2.5"
strum = "0.26.1"
strum_macros = "0.26.1"
signal-hook = "0.3.15"
rayon = "1.7.0"
trie-rs = "0.2.0"
regex = "1.8.4"
walkdir = "2.3.3"
timeout-readwrite = "0.3.3"
tuirealm = { version = "3.0.1" }
tui-realm-stdlib = { version = "3" }
syntect = "5.3.0"
unicode-width = "0.1.11"
tui-realm-treeview = { version = "3" }
capstone = "0.11.0"
lru = "0.12.1"
chrono = "0.4.31"
sysinfo = "0.30.0"
indexmap = "2.1.0"
chumsky = { version = "0.10.1", features = ["default"] }
ariadne = "0.4.0"
bit_field = "0.10.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.13"
home = "0.5.9"
which = "6.0.1"
dap = "0.4.1-alpha1"
string-interner = "0.19.0"

[dev-dependencies]
serial_test = "3.0.0"

[features]
default = []
nightly = []
int_test = ["nightly"]
