[package]
name = "bugstalker"
version = "0.4.2"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
authors = ["Derevtsov Konstantin <godzie@yandex.ru>"]
description = """
BugStalker is a modern and lightweight debugger for rust applications.
"""
repository = "https://github.com/godzie44/BugStalker"
keywords = ["debugger", "debug", "gdb"]
categories = ["command-line-utilities", "development-tools::debugging"]
build = "build.rs"
exclude = ["/.github", "/doc", "/website", "/extension"]

[[bin]]
bench = false
path = "src/main.rs"
name = "bs"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
nix = { version = "0.27.1", features = [
    "process",
    "signal",
    "uio",
    "personality",
    "ptrace",
] }
once_cell = "1.21.3"
anyhow = "1.0.100"
rustyline = "17.0.2"
rustyline-derive = "0.11.1"
gimli = "0.33.0"
object = "0.32.2"
memmap2 = "0.9.9"
ouroboros = "0.18.5"
typed-arena = "2.0.2"
fallible-iterator = "0.3.0"
itertools = "0.12.1"
rustc-demangle = "0.1.26"
thiserror = "1.0.69"
bytes = "1.11.0"
log = "0.4.29"
env_logger = "0.11.8"
crossterm = "0.27.0"
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
os_pipe = "1.2.3"
proc-maps = "0.3.2"
thread_db = "0.1.4"
smallvec = "1.15.1"
rand = "0.8.5"
ctrlc = "3.5.1"
strum = "0.26.3"
strum_macros = "0.26.4"
signal-hook = "0.3.18"
rayon = "1.11.0"
trie-rs = "0.2.0"
regex = "1.12.2"
walkdir = "2.5.0"
timeout-readwrite = "0.3.3"
tuirealm = { version = "3.3.0" }
tui-realm-stdlib = { version = "3" }
syntect = "5.3.0"
unicode-width = "0.1.14"
tui-realm-treeview = { version = "3" }
capstone = "0.11.0"
lru = "0.12.5"
chrono = "0.4.42"
sysinfo = "0.30.13"
indexmap = "2.12.1"
chumsky = { version = "0.10.1", features = ["default"] }
ariadne = "0.4.1"
bit_field = "0.10.3"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.23"
home = "0.5.12"
which = "6.0.3"
string-interner = "0.19.0"
libc = "0.2"

[dev-dependencies]
serial_test = "3.2.0"

[features]
default = []
nightly = []
int_test = ["nightly"]
