[workspace]
members = [
    "pastebin",
    "todos",
    "tokiotiker",
    "calc",
    "fizzbuzz",
    "hello_world",
    "vars",
    "mt",
    "recursion",
    "sleeper",
    "signals",
    "shlib/calc_lib",
    "shlib/calc_bin",
    "shlib/printer_lib",
    "panic",
    "calculations",
    "calls",
]

exclude = [
    "tokio_tcp/tokio_1_40",
    "tokio_tcp/tokio_1_41",
    "tokio_tcp/tokio_1_42",
    "tokio_tcp/tokio_1_43",
    "tokio_tcp/tokio_1_44",
    "tokio_vars/tokio_1_40",
    "tokio_vars/tokio_1_41",
    "tokio_vars/tokio_1_42",
    "tokio_vars/tokio_1_43",
    "tokio_vars/tokio_1_44",
]

resolver = "2"
