[package]
name = "tokio_tcp"
version = "0.0.0"
edition = "2021"
workspace = "./.."
publish = false

[dependencies]
tokio_1_40 = { package = "tokio", version = "1.40.0", optional = true, features = [
    "full",
] }
tokio_1_41 = { package = "tokio", version = "1.41.0", optional = true, features = [
    "full",
] }
rand = "0.8"
log = "0.4.20"

[features]
tokio_v_1_40 = ["tokio_1_40"]
tokio_v_1_41 = ["tokio_1_41"]
default = ["tokio_v_1_40"]

[[bin]]
name = "tokio_tcp_1_40"
path = "src/main.rs"

[[bin]]
name = "tokio_tcp_1_41"
path = "src/main.rs"
